# roamv3

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  ALL_ENV_VARIABLES.md  APP_OVERVIEW.md  App.tsx  BETA_UNLOCK.md  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  MUSIC_ATTACHMENT_FLOW.md  PRODUCTION_READINESS_REPORT.md  README.md  ROAM_CONSOLIDATED_PROJECT_PLAN.md  ROAM_PRINT_READY_REPORT.md  Roam_Simulation_Report.docx  TECHNICAL_CHALLENGES_DOCUMENTATION.md  app.json  package.json  pnpm-lock.yaml  render.yaml  roam-stack.md  tsconfig.base.json  turbo.json
Implement Documation Steps/: PASSWORD_RESET_GUIDE.md  README.md
apps/api/: .env.example  Dockerfile  package.json  railway.toml
apps/mobile/: .easignore  .env.example  .gitignore  App.tsx  BOOT-VERIFICATION.md  DEP-2-CHECKLIST.md  NEXT-STEPS.md  RECOVERY-WORKFLOW.md  app.json  eas.json  index.js  metro.config.js  package.json  tsconfig.json
apps/web/: package.json  tsconfig.json
docs/: CURSOR_PROMPT_GROUP.md  CURSOR_PROMPT_REF_VIEWER.md  CURSOR_PROMPT_SPATIAL.md  CURSOR_PROMPT_WORKBENCH.md  ROAM_PRD_FINAL.md  ROAM_PRD_FINAL__6_.md  ROAM_PROJECT_GUIDE.md  Roam_V2_PRD.md  TRAYCER_PHASE1_SCOPE.md  TRAYCER_UPDATED.md
patches/: expo-modules-core@1.12.26.patch  expo-sqlite@14.0.6.patch
roam-music/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  railway.toml
roam-music/roam_music/: __init__.py  analyzer.py  claim.py  reconciler.py  writer.py
src/app/: routes.tsx
src/imports/: Roam_Figma_Brief_(1).md  (+2 more)
supabase/: config.toml
temp-figma-docs/: IMPLEMENTATION_GUIDE.md  index.html
(+189 files in other folders)
