[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roam-music"
version = "0.1.0"
description = "Roam Music Analysis Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "essentia>=2.1b6.dev1110",
  "supabase>=2.0.0",
  "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
py-modules = ["main"]
